apps/keycloak/base/resources/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway-keycloak
  namespace: keycloak
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - sso.svc.home.arpa
    - port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: keycloak-tls
      hosts:
        - sso.svc.home.arpa
