apps/keycloak/base/resources/virtual-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-keycloak
  namespace: keycloak
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https-keycloak
  hostnames:
    - sso.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-service
          port: 8080
